# Skychimp_service

./: README.md  pyproject.toml
app_mailing/: models.py
config/: settings.py
mailing/templates/mailing/: message_confirm_delete.html
