[tool.poetry]
name = "skychimp-service"
version = "0.1.0"
description = ""
authors = ["Alexxxandr83 <alexandp83@mail.ru>"]
readme = "README.md"
packages = [{include = "skychimp_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
